syntax = "proto2";

message VirtualTouchDeviceDescriptor {
  optional bool absolute = 1;
  optional bool integratedDisplay = 2;
  optional float screenSizeWidth = 3;
  optional float screenSizeHeight = 4;
}