syntax = "proto2";

import "pyatv/protocols/mrp/protobuf/ProtocolMessage.proto";

extend ProtocolMessage {
  optional ClientUpdatesConfigMessage clientUpdatesConfigMessage = 21;
}

message ClientUpdatesConfigMessage {
  optional bool artworkUpdates = 1;
  optional bool nowPlayingUpdates = 2;
  optional bool volumeUpdates = 3;
  optional bool keyboardUpdates = 4;
  optional bool outputDeviceUpdates = 5;
}

